[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui-assets/1920x1080_white.svg" type="Texture" id=1]
[ext_resource path="res://ui-assets/building-machinedrawer.svg" type="Texture" id=2]
[ext_resource path="res://Levels/Level4/Level4HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level4/Level4Drawer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level4/Level4.gd" type="Script" id=5]
[ext_resource path="res://Levels/Level4/Level4Grid.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/conveyor_straight.svg" type="Texture" id=7]
[ext_resource path="res://assets/conveyor_curved_ccw.svg" type="Texture" id=8]
[ext_resource path="res://assets/conveyor_curved_cw.svg" type="Texture" id=9]
[ext_resource path="res://Levels/Level3/Dye.gd" type="Script" id=10]
[ext_resource path="res://Levels/Level2/Frabic.gd" type="Script" id=11]
[ext_resource path="res://Levels/Level2/Shirt.gd" type="Script" id=12]
[ext_resource path="res://Levels/Level1/Thread.gd" type="Script" id=13]
[ext_resource path="res://Levels/Level1/money.gd" type="Script" id=14]
[ext_resource path="res://Levels/Level4/Screenedcloth.gd" type="Script" id=15]
[ext_resource path="res://Levels/Level4/Label.gd" type="Script" id=16]
[ext_resource path="res://assets/real like.png" type="Texture" id=17]
[ext_resource path="res://Levels/Level4/Popup.gd" type="Script" id=18]

[node name="Level4" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="DrawerBackground" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Level4HUD" parent="." instance=ExtResource( 3 )]

[node name="money" type="Label" parent="Level4HUD"]
margin_left = 201.0
margin_top = 70.0
margin_right = 256.0
margin_bottom = 84.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Money : "
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dye" type="Label" parent="Level4HUD"]
margin_left = 201.0
margin_top = 98.0
margin_right = 241.0
margin_bottom = 112.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Dye : "
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thread" type="Label" parent="Level4HUD"]
margin_left = 201.0
margin_top = 125.0
margin_right = 256.0
margin_bottom = 139.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Thread : "
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frabic" type="Label" parent="Level4HUD"]
margin_left = 201.0
margin_top = 154.0
margin_right = 251.0
margin_bottom = 168.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Fabric : "
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shirt" type="Label" parent="Level4HUD"]
margin_left = 326.0
margin_top = 70.0
margin_right = 367.0
margin_bottom = 84.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Shirt : "
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colored_fabric" type="Label" parent="Level4HUD"]
margin_left = 326.0
margin_top = 98.0
margin_right = 366.0
margin_bottom = 112.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Colored fabric : "
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screenedshirt" type="Label" parent="Level4HUD"]
margin_left = 326.0
margin_top = 125.0
margin_right = 366.0
margin_bottom = 139.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Colored shirt : "
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="objective" type="Label" parent="Level4HUD"]
margin_left = 366.0
margin_top = 19.0
margin_right = 482.0
margin_bottom = 67.0
text = "objective :
- 15 colored fabric
- 5 colored shirt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4Drawer" parent="." instance=ExtResource( 4 )]

[node name="Level4Grid" parent="." instance=ExtResource( 6 )]

[node name="belt" type="Node" parent="."]

[node name="ConveyorStraight" type="Sprite" parent="belt"]
position = Vector2( 961, 290 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorCurvedCcw" type="Sprite" parent="belt"]
position = Vector2( 629, 290 )
rotation = 3.14159
texture = ExtResource( 8 )

[node name="ConveyorCurvedCw" type="Sprite" parent="belt"]
position = Vector2( 961, 123 )
rotation = 1.5708
texture = ExtResource( 9 )

[node name="ConveyorCurvedCcw3" type="Sprite" parent="belt"]
position = Vector2( 1626, 456 )
rotation = 1.5708
texture = ExtResource( 8 )

[node name="ConveyorStraight2" type="Sprite" parent="belt"]
position = Vector2( 1459, 290 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorCurvedCw2" type="Sprite" parent="belt"]
position = Vector2( 962, 457 )
rotation = 3.14159
texture = ExtResource( 9 )

[node name="ConveyorCurvedCcw4" type="Sprite" parent="belt"]
position = Vector2( 1293, 456 )
rotation = -3.14159
texture = ExtResource( 8 )

[node name="ConveyorStraight3" type="Sprite" parent="belt"]
position = Vector2( 795, 290 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight4" type="Sprite" parent="belt"]
position = Vector2( 795, 455 )
rotation = 4.71239
texture = ExtResource( 7 )

[node name="ConveyorStraight5" type="Sprite" parent="belt"]
position = Vector2( 1127, 291 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight6" type="Sprite" parent="belt"]
position = Vector2( 631, 455 )
rotation = 4.71239
texture = ExtResource( 7 )

[node name="ConveyorCurvedCcw5" type="Sprite" parent="belt"]
position = Vector2( 1790, 290 )
rotation = 1.5708
texture = ExtResource( 8 )

[node name="ConveyorCurvedCcw2" type="Sprite" parent="belt"]
position = Vector2( 796, 122 )
rotation = 3.14159
texture = ExtResource( 8 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( 1289, 596 )
texture = ExtResource( 17 )
